--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ html {
 
 @media screen and (max-width:35.438em) {
   .pure-g {
-    width: 20em;
+    width: 18em;
   }
 }
 
@@ -266,6 +266,7 @@ html {
 .nav-button {
   position: relative;
   box-sizing: border-box;
+  float: right;
   padding: 1rem;
   width: 4rem;
   height: 3rem;
@@ -359,11 +360,11 @@ html {
 }
 
 .section-about__text {
-  padding-right: 2em;
+
 }
 
 .section-about__image {
-  padding-left: 2em;
+
 }
 /* section block END */
 
