--- a/fonts/open-sans/open-sans.css
+++ b/fonts/open-sans/open-sans.css
@@ -1,5 +1,31 @@
 @font-face {
 	font-family:'Open Sans';
+	src: url('OpenSans-Light.eot');
+	src: url('OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+		url('OpenSans-Light.woff') format('woff'),
+		url('OpenSans-Light.ttf') format('truetype'),
+		url('OpenSans-Light.svg#OpenSans-Light') format('svg');
+	font-weight: 300;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
+
+@font-face {
+	font-family:'Open Sans';
+	src: url('OpenSans.eot');
+	src: url('OpenSans.eot?#iefix') format('embedded-opentype'),
+		url('OpenSans.woff') format('woff'),
+		url('OpenSans.ttf') format('truetype'),
+		url('OpenSans.svg#OpenSans') format('svg');
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
+
+@font-face {
+	font-family:'Open Sans';
 	src: url('OpenSans-Bold.eot');
 	src: url('OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
 		url('OpenSans-Bold.woff') format('woff'),
