--- a/fonts/open-sans/open-sans.css
+++ b/fonts/open-sans/open-sans.css
@@ -26,6 +26,19 @@
 
 @font-face {
 	font-family:'Open Sans';
+	src: url('OpenSans-Italic.eot');
+	src: url('OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
+		url('OpenSans-Italic.woff') format('woff'),
+		url('OpenSans-Italic.ttf') format('truetype'),
+		url('OpenSans-Italic.svg#OpenSans-Italic') format('svg');
+	font-weight: 400;
+	font-style: italic;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
+
+@font-face {
+	font-family:'Open Sans';
 	src: url('OpenSans-Bold.eot');
 	src: url('OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
 		url('OpenSans-Bold.woff') format('woff'),
