--- a/fonts/oswald/oswald.css
+++ b/fonts/oswald/oswald.css
@@ -23,3 +23,29 @@
 	font-stretch: normal;
 	unicode-range: U+0020-25CA;
 }
+
+@font-face {
+	font-family:'Oswald';
+	src: url('Oswald-Medium.eot');
+	src: url('Oswald-Medium.eot?#iefix') format('embedded-opentype'),
+		url('Oswald-Medium.woff') format('woff'),
+		url('Oswald-Medium.ttf') format('truetype'),
+		url('Oswald-Medium.svg#Oswald-Medium') format('svg');
+	font-weight: 500;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
+
+@font-face {
+	font-family:'Oswald';
+	src: url('Oswald-Heavy.eot');
+	src: url('Oswald-Heavy.eot?#iefix') format('embedded-opentype'),
+		url('Oswald-Heavy.woff') format('woff'),
+		url('Oswald-Heavy.ttf') format('truetype'),
+		url('Oswald-Heavy.svg#Oswald-Heavy') format('svg');
+	font-weight: 800;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-25CA;
+}
