--- a/css/themes/color_blue.css
+++ b/css/themes/color_blue.css
@@ -24,7 +24,8 @@
 .nav-button__line:before,
 .titlebar__header:after,
 .newsletter__subscribe,
-.news-item__button
+.news-item__button,
+.settings__button
 {
     background-color: #597da3;
 }
@@ -36,7 +37,8 @@
 }
 
 .newsletter__subscribe:hover,
-.news-item__button:hover
+.news-item__button:hover,
+.settings__button:hover
 {	
 	background-color: #4e7199;
 }
