--- a/fonts/icons/icons.css
+++ b/fonts/icons/icons.css
@@ -23,14 +23,15 @@
 font-style: normal;
 }
 
-.flaticon-arrow-left:before { content: "\f100"; }
-.flaticon-arrow-right:before { content: "\f101"; }
+.flaticon-arrow-right:before { content: "\f100"; }
+.flaticon-arrow-left:before { content: "\f101"; }
 .flaticon-baby:before { content: "\f102"; }
 .flaticon-clock:before { content: "\f103"; }
-.flaticon-cogwheel:before { content: "\f104"; }
-.flaticon-internet:before { content: "\f105"; }
-.flaticon-location:before { content: "\f106"; }
-.flaticon-mail:before { content: "\f107"; }
-.flaticon-paper:before { content: "\f108"; }
-.flaticon-phone:before { content: "\f109"; }
-.flaticon-social:before { content: "\f10a"; }
+.flaticon-close:before { content: "\f104"; }
+.flaticon-cogwheel:before { content: "\f105"; }
+.flaticon-internet:before { content: "\f106"; }
+.flaticon-location:before { content: "\f107"; }
+.flaticon-mail:before { content: "\f108"; }
+.flaticon-paper:before { content: "\f109"; }
+.flaticon-phone:before { content: "\f10a"; }
+.flaticon-social:before { content: "\f10b"; }
